footer, efeitos e correções de erros

--- a/pratica.html
+++ b/pratica.html
@@ -33,8 +33,8 @@
           <h2>Novidades :</h2>
           <ul class="navegacao-lateral">
             <li><a href="#contratacao">Contratação</a></li>
-            <li><a href="">Spotify</a></li>
-            <li><a href="">Instagram</a></li>
+            <li><a href="#footer">Spotify</a></li>
+            <li><a href="#footer">Instagram</a></li>
             <li><a href="">Agenda de Shows</a></li>
           </ul>
         </div>
@@ -100,7 +100,7 @@
           <!--<audio controls class="audio">
             <source src="audios/dois zero zero quatro.wav" type="audio/wav" />
           </audio>-->
-          <p class="texto-conteudo">
+          <p class="texto-conteudo2">
             O novo contratado da DaVilla nos últimos meses se intitula Sampaio.
             Com origem no Drill, o rapper de São Paulo foi selecionado como o
             segundo artista escalado para contratação oficial na DaVilla, um
@@ -110,7 +110,44 @@
         </div>
       </section>
       <div class="clear"></div>
+      <!--Fim Conteudo-->
+
+      <footer id="footer">
+        <div class="rodape">
+          <table class="tabela-rodape">
+            <tr>
+              <th>Redes Sociais:</th>
+              <th>Colaboradores:</th>
+              <th>Social IOC:</th>
+              <th>Social Sampaio:</th>
+            </tr>
+
+            <tr>
+              <td><a href="">Instagram</a></td>
+              <td>Leviatã</td>
+              <td>Insta: @ioc.off</td>
+              <td>Insta: Mateus.Sampaio</td>
+            </tr>
+
+            <tr>
+              <td><a href="">Twitter</a></td>
+              <td>Vans</td>
+              <td>Twitter: ioc.off</td>
+              <td>Twitter :SampaioDaVilla</td>
+            </tr>
+
+            <tr>
+              <td><a href="">Facebook</a></td>
+              <td>StreetSweet</td>
+              <td><a href="">Spotify: IOC</a></td>
+            </tr>
+
+            <tr>
+              <td><a href="">YouTube</a></td>
+            </tr>
+          </table>
+        </div>
+      </footer>
     </div>
-    <!--Fim conteudo-->
   </body>
 </html>
